apps/tdebian/tdebian_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: tdebian
spec: {}
status: {}
