apps/tdebian/tdebian.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdebian-service
  namespace: tdebian
spec:
  selector:
    app: tdebian
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdebian-deployment
  namespace: tdebian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdebian
  template:
    metadata:
      labels:
        app: tdebian
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: pgpass-volume
          secret:
            secretName: pgpass-secret  # Mounted pgpass secret
            defaultMode: 0600
      containers:
        - name: tdebian
          image: ghcr.io/ditmanson/django:0.0.6
          command: ["/env/bin/gunicorn"]
          args: ["--bind", ":8000", "--workers", "3", "tdebian.wsgi"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: pgpass-volume
              mountPath: /etc/secrets/.my_pgpass
              subPath: .my_pgpass
              readOnly: true
