apps/tdebian/gateway-tdebian.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: tdebian
spec:
  selector:
    istio: ingressgateway
  servers:
    ##### Servers ######
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - tdebian.com
    - port:
        number: 443
        name: https-tech
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tdebian-credential
      hosts:
        - "tdebian.com"
